[gd_scene load_steps=5 format=2]

[ext_resource path="res://Arena/Arena.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Tutorial.gd" type="Script" id=2]
[ext_resource path="res://Resources/Fonts/DialogBold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Fonts/DialogRegular.tres" type="DynamicFont" id=4]

[node name="Level01" instance=ExtResource( 1 )]
level_name = "Level01"
next_scene = "Level02"

[node name="Player_placeholder_b" parent="." index="2"]
hit_points = 12
max_hit_points = 12

[node name="DemonPool" parent="." index="3"]
visible = false

[node name="CubeSection" parent="." index="4"]
visible = false

[node name="Tutorial" type="Control" parent="HUD" index="5"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="ColorRect" parent="HUD/Tutorial" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.745098 )

[node name="Step01" type="ColorRect" parent="HUD/Tutorial" index="1"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -54.0
margin_right = 325.5
margin_bottom = 54.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step01" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "This is a sorcerer's duel.
Your goal is to reduce your oponent's hit points to zero."
text = "This is a sorcerer's duel.
Your goal is to reduce your oponent's hit points to zero."

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step01" index="1"]
position = Vector2( 478, 74 )

[node name="Step01b" type="ColorRect" parent="HUD/Tutorial" index="2"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -63.5
margin_right = 325.5
margin_bottom = 63.5
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step01b" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.5
margin_top = 13.5
margin_right = -15.5
margin_bottom = -14.5
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "To do so, you have access to your spells trough random [wave amp=25 freq=2][b]thoughts[/b][/wave].
 Put that thoughts in order to access powerfull spells."
text = "To do so, you have access to your spells trough random thoughts.
 Put that thoughts in order to access powerfull spells."

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step01b" index="1"]
position = Vector2( 478, 101.5 )

[node name="Step01c" type="ColorRect" parent="HUD/Tutorial" index="3"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -65.5
margin_right = 325.5
margin_bottom = 65.5
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step01c" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Press [wave amp=25 freq=2][b]Concentrate[/b][/wave] to bring some [b]thoughts[/b] to your mind.

Then [wave amp=25 freq=2][b]Cast[/b][/wave] to cast that spell."
text = "Press Concentrate to bring some thoughts to your mind.

Then Cast to cast that spell."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step01c" index="1"]
position = Vector2( 477.5, 99 )

[node name="Step02" type="ColorRect" parent="HUD/Tutorial" index="4"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -65.0
margin_right = 326.0
margin_bottom = 35.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step02" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.5
margin_top = 12.5
margin_right = -16.5
margin_bottom = -15.5
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "After be [b]Concentrated[/b] you can discard the [b]Thoughts[/b] you don't want to use by clicking on them."
text = "After be Concentrated you can discard the Thoughts you don't want to use by clicking on them."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step02" index="1"]
position = Vector2( 477.5, 77 )

[node name="Step02b" type="ColorRect" parent="HUD/Tutorial" index="5"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -67.0
margin_right = 326.0
margin_bottom = 38.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step02b" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.5
margin_top = 12.5
margin_right = -16.5
margin_bottom = -15.5
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Then you can [b]Concentrate[/b] again. Beware that you have a limit of [b]3[/b] times to do this concentration ritual."
text = "Then you can Concentrate again. Beware that you have a limit of 3 times to do this concentration ritual."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step02b" index="1"]
position = Vector2( 477.5, 78 )

[node name="Step03" type="ColorRect" parent="HUD/Tutorial" index="6"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -81.0
margin_right = 325.5
margin_bottom = 81.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step03" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "The power of [b]Sorcerers[/b] attract evil forces from the demon realm.
Every time a demonic thought comes to your mind your gain a demon stalker [img=<30>x<30>]res://Cubes/Assets/01_c_demoniaco.jpg[/img]."
text = "The power of Sorcerers attract evil forces from the demon realm.
Every time a demonic thought comes to your mind your gain a demon stalker ."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step03" index="1"]
position = Vector2( 478, 140 )

[node name="Step03b" type="ColorRect" parent="HUD/Tutorial" index="7"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.0
margin_top = -74.0
margin_right = 326.0
margin_bottom = 114.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step03b" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "7 demons are needed to open a portal to the mortal realm. 

When all demons are convoked they will drain life from the [b]sorcerers[/b], then they'll go back to their dimension."
text = "7 demons are needed to open a portal to the mortal realm. 

When all demons are convoked they will drain life from the sorcerers, then they'll go back to their dimension."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step03b" index="1"]
position = Vector2( 478, 148 )

[node name="Step04" type="ColorRect" parent="HUD/Tutorial" index="8"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -138.0
margin_right = 325.5
margin_bottom = 138.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step04" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "There are different ways to remove demon stalkers from you, the best way is to [b]Control[/b] your mind.

[img=<30>x<30>]res://Cubes/Assets/13_control.jpg[/img] [img=<30>x<30>]res://Cubes/Assets/13_control.jpg[/img] [img=<30>x<30>]res://Cubes/Assets/13_control.jpg[/img]

it removes all the demons from you and creates a force field that prevents the next 3 demons that tries to stalk you."
text = "There are different ways to remove demon stalkers from you, the best way is to Control your mind.

  

it removes all the demons from you and creates a force field that prevents the next 3 demons that tries to stalk you."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step04" index="1"]
position = Vector2( 478, 253 )

[node name="Step05" type="ColorRect" parent="HUD/Tutorial" index="9"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -52.5
margin_right = 325.5
margin_bottom = 52.5
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step05" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "There are difficult and powerfull spells that requires to have a specific set of thoughts.  "
text = "There are difficult and powerfull spells that requires to have a specific set of thoughts.  "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step05" index="1"]
position = Vector2( 478, 80 )

[node name="Step05b" type="ColorRect" parent="HUD/Tutorial" index="10"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -325.5
margin_top = -52.0
margin_right = 325.5
margin_bottom = 52.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step05b" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "if you can get that thoughts in the first concentration the damage will be [shake rate=30 level=10][b]CRITIC[/b][/shake]"
text = "if you can get that thoughts in the first concentration the damage will be CRITIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step05b" index="1"]
position = Vector2( 478, 79 )

[node name="Step05c" type="ColorRect" parent="HUD/Tutorial" index="11"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -52.0
margin_right = 193.0
margin_bottom = 38.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="HUD/Tutorial/Step05c" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = 13.0
margin_right = -16.0
margin_bottom = -15.0
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][shake rate=30 level=10]DEFEAT ALBERICH![/shake][/center]"
text = "DEFEAT ALBERICH!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="HUD/Tutorial/Step05c" index="1"]
position = Vector2( 161, 66 )

[node name="Next" type="Button" parent="HUD/Tutorial" index="12"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = 42.5
margin_right = 43.0
margin_bottom = 71.5
custom_fonts/font = ExtResource( 3 )
text = "NEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvatarPlayer1" parent="." index="7"]
visible = false

[node name="AvatarPlayer2" parent="." index="8"]
visible = false
